k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laundrypool-service
  labels:
    app: laundrypool
spec:
  type: LoadBalancer
  selector:
    app: laundrypool
  ports:
    - protocol: TCP
      port: 443
      targetPort: 80
